--- a/Notes/Week9/week9.tex
+++ b/Notes/Week9/week9.tex
@@ -297,5 +297,16 @@
 
 
 
+\section{Twitch Stream}
+\begin{itemize}
+    \item \marginnote{12/3:}18a of the review sheet is true.
+    \begin{itemize}
+        \item Orbit-Stabilizer Theorem: $|C|\cdot|\gen{g}|=|G|$. $C$ is the centralizer. So we need to compute the size of the conjugacy class of the $n$-cycle. There are $n!/n$ of these. So $C=n$.
+        \item The centralizer is not the normalizer; the latter will be bigger.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
