--- a/preamble.tex
+++ b/preamble.tex
@@ -59,6 +59,10 @@
 \DeclareMathOperator{\Fixed}{Fixed}
 \setcounter{MaxMatrixCols}{20}
 
+\theoremstyle{definition}
+\newtheorem{proposition}{Proposition}
+\newtheorem{theorem}[proposition]{Theorem}
+
 \NiceMatrixOptions{cell-space-limits=1pt}
 
 \DeclareFontFamily{U}{mathb}{}
